2009-01-31  David Hyatt  <hyatt@apple.com>

        More removal of code from RenderContainer.  Move removeLeftoverAnonymousBlock down into RenderBlock.
        Move destroyLeftoverChildren into the RenderObjectChildList.  Convert all containers to use the
        RenderObjectChildList.

        Reviewed by Sam Weinig

        * WebCore.xcodeproj/project.pbxproj:
        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::destroy):
        (WebCore::RenderBlock::addChild):
        (WebCore::RenderBlock::removeLeftoverAnonymousBlock):
        (WebCore::RenderBlock::layoutPositionedObjects):
        (WebCore::RenderBlock::childBecameNonInline):
        * rendering/RenderBlock.h:
        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::layout):
        * rendering/RenderBox.h:
        (WebCore::RenderBox::firstChildBox):
        (WebCore::RenderBox::lastChildBox):
        * rendering/RenderContainer.cpp:
        (WebCore::RenderContainer::addChild):
        (WebCore::RenderContainer::removeChildNode):
        (WebCore::RenderContainer::updateBeforeAfterContentForContainer):
        (WebCore::RenderContainer::appendChildNode):
        (WebCore::RenderContainer::insertChildNode):
        (WebCore::RenderContainer::positionForCoordinates):
        (WebCore::RenderContainer::addLineBoxRects):
        (WebCore::RenderContainer::collectAbsoluteLineBoxQuads):
        * rendering/RenderContainer.h:
        (WebCore::RenderContainer::virtualChildren):
        (WebCore::RenderContainer::children):
        * rendering/RenderInline.cpp:
        (WebCore::RenderInline::destroy):
        * rendering/RenderInline.h:
        (WebCore::RenderInline::layout):
        * rendering/RenderMedia.cpp:
        (WebCore::RenderMedia::destroy):
        (WebCore::RenderMedia::children):
        * rendering/RenderMedia.h:
        (WebCore::RenderMedia::virtualChildren):
        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::destroy):