@@ -52,8 +52,6 @@ RenderTable::RenderTable(Node* node)
     , m_firstBody(0)
     , m_tableLayout(0)
     , m_currentBorder(0)
-    , m_frame(Void)
-    , m_rules(None)
     , m_hasColElements(false)
     , m_needsSectionRecalc(0)
     , m_hSpacing(0)
